add header, footer, sidebar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,15 @@
-<h1>Angular Router App</h1>
-<!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
-<nav>
-  <ul>
-    <li>
-      <a href="/login" routerLinkActive="active"
-        >Login page</a
-      >
-    </li>
-    <li>
-      <a href="/home" routerLinkActive="active"
-        >Home page</a
-      >
-    </li>
-    <li>
-      <a href="/users" routerLinkActive="active"
-        >Manage Users</a
-      >
-    </li>
-    <li>
-      <a href="/users/create" routerLinkActive="active"
-        >Create User</a
-      >
-    </li>
-  </ul>
-</nav>
-<!-- The routed views render in the <router-outlet>-->
-<router-outlet></router-outlet>
+<app-header class="header"></app-header>
+
+<mat-drawer-container class="main">
+  <mat-drawer mode="side" class="left-menu" opened>
+    <app-sidebar></app-sidebar>
+  </mat-drawer>
+
+  <mat-drawer-content>
+    <main class="main-content">
+      <router-outlet></router-outlet>
+    </main>
+
+    <app-footer class="footer"></app-footer>
+  </mat-drawer-content>
+</mat-drawer-container>
