--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<div class="wrapper">
+  <div class="container">
+    <h1>Login to Admin Panel</h1>
+
+    <mat-card class="form">
+      <mat-form-field class="form-field">
+        <input matInput placeholder="Email" autocomplete="off" />
+      </mat-form-field>
+
+      <mat-form-field class="form-field">
+        <input matInput placeholder="Password" type="password" />
+      </mat-form-field>
+
+      <button mat-raised-button class="btn-login" color="primary">
+        <span> Login</span>
+      </button>
+    </mat-card>
+  </div>
+</div>
