update header links

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,9 +17,9 @@
     </div>
 
     <mat-menu #menu="matMenu">
-      <a mat-menu-item routerLink="/profile">Profile</a>
+      <a mat-menu-item routerLink="/admin/profile">Profile</a>
       <mat-divider></mat-divider>
-      <a mat-menu-item routerLink="/login">Log out</a>
+      <a mat-menu-item routerLink="/admin/login">Log out</a>
     </mat-menu>
   </div>
 </header>
