update login form

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,11 +9,9 @@
           placeholder="Email"
           autocomplete="off"
           [(ngModel)]="email"
-          required
           email
-          #emailInput="ngModel"
         />
-        <mat-error *ngIf="emailInput.invalid">Invalid email address</mat-error>
+        <mat-error>Invalid email address</mat-error>
       </mat-form-field>
 
       <mat-form-field class="form-field">
@@ -22,12 +20,8 @@
           placeholder="Password"
           type="password"
           [(ngModel)]="password"
-          required
-          #passwordInput="ngModel"
         />
-        <mat-error *ngIf="passwordInput.invalid"
-          >Please input password</mat-error
-        >
+        <mat-error>Please input password</mat-error>
       </mat-form-field>
 
       <button
