--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,44 @@
-<p>profile works!</p>
+<h1>Profile</h1>
+
+<div class="container">
+  <div class="form">
+    <mat-form-field>
+      <input matInput placeholder="Name" autocomplete="off" />
+      <mat-error>You must enter a value</mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" placeholder="Birthday" autocomplete="off" />
+      <mat-error>Invalid date format</mat-error>
+      
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="Phone" autocomplete="off" />
+    </mat-form-field>
+
+    <mat-form-field>
+      <textarea matInput placeholder="Bio" rows="4"></textarea>
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" class="btn-update">
+      Update Profile
+    </button>
+  </div>
+
+  <div class="avatar">
+    <img [src]="avatarUrl" alt="avatar" />
+
+    <input #avatar type="file" accept="image/*" style="display: none;" />
+
+    <button
+      mat-raised-button
+      (click)="avatar.click()"
+      style="margin-top: 1rem;"
+    >
+      Change Avatar
+    </button>
+  </div>
+</div>
