--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,29 +1,56 @@
 <h1>Profile</h1>
 
 <div class="container">
-  <div class="form">
+  <div class="form" [formGroup]="profileForm">
     <mat-form-field>
-      <input matInput placeholder="Name" autocomplete="off" />
+      <input
+        matInput
+        placeholder="Name"
+        autocomplete="off"
+        formControlName="name"
+      />
       <mat-error>You must enter a value</mat-error>
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput [matDatepicker]="picker" placeholder="Birthday" autocomplete="off" />
+      <input
+        matInput
+        [matDatepicker]="picker"
+        placeholder="Birthday"
+        autocomplete="off"
+        formControlName="birthday"
+      />
       <mat-error>Invalid date format</mat-error>
-      
+
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Phone" autocomplete="off" />
+      <input
+        matInput
+        placeholder="Phone"
+        autocomplete="off"
+        formControlName="phone"
+      />
     </mat-form-field>
 
     <mat-form-field>
-      <textarea matInput placeholder="Bio" rows="4"></textarea>
+      <textarea
+        matInput
+        placeholder="Bio"
+        rows="4"
+        formControlName="bio"
+      ></textarea>
     </mat-form-field>
 
-    <button mat-raised-button color="primary" class="btn-update">
+    <button
+      mat-raised-button
+      color="primary"
+      class="btn-update"
+      [disabled]="!profileForm.valid"
+      (click)="updateProfile()"
+    >
       Update Profile
     </button>
   </div>
@@ -31,7 +58,13 @@
   <div class="avatar">
     <img [src]="avatarUrl" alt="avatar" />
 
-    <input #avatar type="file" accept="image/*" style="display: none;" />
+    <input
+      #avatar
+      type="file"
+      accept="image/*"
+      style="display: none;"
+      (change)="onFileChange($event)"
+    />
 
     <button
       mat-raised-button
