--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,1 +1,77 @@
-<p>users works!</p>
+<div class="page-header">
+  <button
+    mat-raised-button
+    class="btn-new"
+    color="primary"
+    routerLink="/admin/users/create"
+  >
+    <mat-icon aria-hidden="false" aria-label="Add icon">add</mat-icon>
+    <span> New User </span>
+  </button>
+
+  <mat-form-field>
+    <input matInput placeholder="Search User" />
+  </mat-form-field>
+</div>
+
+<div style="position: relative;">
+  <div class="mat-elevation-z1">
+    <table mat-table [dataSource]="users" matSort>
+      <ng-container matColumnDef="avatar">
+        <th mat-header-cell *matHeaderCellDef>Avatar</th>
+        <td mat-cell *matCellDef="let element">
+          <div class="avatar" style="padding: 10px;">
+            <img
+              [src]="element.avatar || 'assets/img/default-avatar.jpg'"
+              alt="avatar"
+            />
+          </div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">
+          <a routerLink="/admin/users/edit">
+            {{ element.name }}
+          </a>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="email">
+        <th mat-header-cell mat-sort-header *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="birthday">
+        <th mat-header-cell *matHeaderCellDef>Birthday</th>
+        <td mat-cell *matCellDef="let element">{{ element.birthday }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef class="text-center">Action</th>
+        <td mat-cell *matCellDef="let element" class="text-center">
+          <button mat-button class="btn-edit">
+            <mat-icon aria-hidden="false" aria-label="Add icon">edit</mat-icon>
+          </button>
+          <button mat-button class="btn-delete">
+            <mat-icon aria-hidden="false" aria-label="Add icon"
+              >delete</mat-icon
+            >
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <mat-paginator
+      #paginator
+      [length]="users.length"
+      [pageSize]="itemsPerPage"
+      [pageSizeOptions]="[5, 10, 20, 50]"
+      showFirstLastButtons
+    ></mat-paginator>
+  </div>
+</div>
