--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -10,13 +10,23 @@
   </button>
 
   <mat-form-field>
-    <input matInput placeholder="Search User" />
+    <input
+      matInput
+      placeholder="Search User"
+      [(ngModel)]="searchUserInput"
+      (input)="searchUser()"
+    />
   </mat-form-field>
 </div>
 
 <div style="position: relative;">
   <div class="mat-elevation-z1">
-    <table mat-table [dataSource]="users" matSort>
+    <table
+      mat-table
+      [dataSource]="users"
+      matSort
+      (matSortChange)="sortData($event)"
+    >
       <ng-container matColumnDef="avatar">
         <th mat-header-cell *matHeaderCellDef>Avatar</th>
         <td mat-cell *matCellDef="let element">
@@ -68,10 +78,11 @@
 
     <mat-paginator
       #paginator
-      [length]="users.length"
+      [length]="totalItems"
       [pageSize]="itemsPerPage"
       [pageSizeOptions]="[5, 10, 20, 50]"
       showFirstLastButtons
+      (page)="changePage($event)"
     ></mat-paginator>
   </div>
 </div>
