--- a/src/app/components/admin-layout/admin-layout.component.html
+++ b/src/app/components/admin-layout/admin-layout.component.html
@@ -5,7 +5,7 @@
     <app-sidebar></app-sidebar>
   </mat-drawer>
 
-  <mat-drawer-content>
+  <mat-drawer-content class="content">
     <main class="main-content">
       <router-outlet></router-outlet>
     </main>
