--- a/src/app/components/password-form/password-form.component.html
+++ b/src/app/components/password-form/password-form.component.html
@@ -2,6 +2,7 @@
   <mat-form-field>
     <input
       matInput
+      type="password"
       placeholder="Password"
       autocomplete="off"
       formControlName="password"
@@ -15,6 +16,7 @@
   <mat-form-field>
     <input
       matInput
+      type="password"
       placeholder="Confirm Password"
       autocomplete="off"
       formControlName="confirmPassword"
