--- a/src/app/pages/users/create-user/create-user.component.html
+++ b/src/app/pages/users/create-user/create-user.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="createUserForm" (ngSubmit)="createUser()">
-  <!-- <app-user-form formControlName="profile"></app-user-form> -->
+  <app-user-form formControlName="profile"></app-user-form>
 
   <app-password-form formControlName="password"></app-password-form>
 
