format date using date-fns

--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -12,6 +12,16 @@
   <mat-form-field>
     <input
       matInput
+      placeholder="Email"
+      autocomplete="off"
+      formControlName="email"
+    />
+    <mat-error>Invalid email address</mat-error>
+  </mat-form-field>
+
+  <mat-form-field>
+    <input
+      matInput
       [matDatepicker]="picker"
       placeholder="Birthday"
       autocomplete="off"
