--- a/src/app/pages/users/create-user/create-user.component.html
+++ b/src/app/pages/users/create-user/create-user.component.html
@@ -5,6 +5,14 @@
 
   <button
     mat-raised-button
+    routerLink="/admin/users"
+    style="margin-right: 10px"
+  >
+    Cancel
+  </button>
+
+  <button
+    mat-raised-button
     color="primary"
     class="btn-update"
     [disabled]="!createUserForm.valid"
