--- a/src/app/pages/users/edit-user/edit-user.component.html
+++ b/src/app/pages/users/edit-user/edit-user.component.html
@@ -1,1 +1,20 @@
-<p>edit-user works!</p>
+<form [formGroup]="updateUserForm" (ngSubmit)="updateUser()">
+  <app-user-form formControlName="profile"></app-user-form>
+
+  <button
+    mat-raised-button
+    routerLink="/admin/users"
+    style="margin-right: 10px"
+  >
+    Cancel
+  </button>
+
+  <button
+    mat-raised-button
+    color="primary"
+    class="btn-update"
+    [disabled]="!updateUserForm.valid"
+  >
+    Update user
+  </button>
+</form>
