--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -19,7 +19,7 @@
   </mat-form-field>
 </div>
 
-<div style="position: relative;">
+<div style="position: relative">
   <div class="mat-elevation-z1">
     <table
       mat-table
@@ -30,7 +30,7 @@
       <ng-container matColumnDef="avatar">
         <th mat-header-cell *matHeaderCellDef>Avatar</th>
         <td mat-cell *matCellDef="let element">
-          <div class="avatar" style="padding: 10px;">
+          <div class="avatar" style="padding: 10px">
             <img
               [src]="element.avatar || 'assets/img/default-avatar.jpg'"
               alt="avatar"
@@ -42,9 +42,7 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let element">
-          <a routerLink="/admin/users/edit">
-            {{ element.name }}
-          </a>
+          {{ element.name }}
         </td>
       </ng-container>
 
@@ -55,13 +53,17 @@
 
       <ng-container matColumnDef="birthday">
         <th mat-header-cell *matHeaderCellDef>Birthday</th>
-        <td mat-cell *matCellDef="let element">{{ element.birthday }}</td>
+        <td mat-cell *matCellDef="let element">{{ formatDate(element.birthday) }}</td>
       </ng-container>
 
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef class="text-center">Action</th>
         <td mat-cell *matCellDef="let element" class="text-center">
-          <button mat-button class="btn-edit">
+          <button
+            mat-button
+            class="btn-edit"
+            [routerLink]="'/admin/users/edit/' + element.id"
+          >
             <mat-icon aria-hidden="false" aria-label="Add icon">edit</mat-icon>
           </button>
           <button mat-button class="btn-delete">
