fix bug remove address profile page

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,9 +8,6 @@
     >
   </li>
   <li>
-    <a routerLink="/admin/users/create" routerLinkActive="active">Create User</a>
-  </li>
-  <li>
-    <a routerLink="/admin/users/edit" routerLinkActive="active">Edit User</a>
+    <a routerLink="/admin/users/create" routerLinkActive="active">New User</a>
   </li>
 </ul>
