--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -53,7 +53,9 @@
 
       <ng-container matColumnDef="birthday">
         <th mat-header-cell *matHeaderCellDef>Birthday</th>
-        <td mat-cell *matCellDef="let element">{{ formatDate(element.birthday) }}</td>
+        <td mat-cell *matCellDef="let element">
+          {{ formatDate(element.birthday) }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="action">
@@ -64,10 +66,14 @@
             class="btn-edit"
             [routerLink]="'/admin/users/edit/' + element.id"
           >
-            <mat-icon aria-hidden="false" aria-label="Add icon">edit</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Edit icon">edit</mat-icon>
           </button>
-          <button mat-button class="btn-delete">
-            <mat-icon aria-hidden="false" aria-label="Add icon"
+          <button
+            mat-button
+            class="btn-delete"
+            (click)="openDialogDeleteUser(element.id)"
+          >
+            <mat-icon aria-hidden="false" aria-label="Delete icon"
               >delete</mat-icon
             >
           </button>
