--- a/src/app/pages/users/edit-user/edit-user.component.html
+++ b/src/app/pages/users/edit-user/edit-user.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="updateUserForm" (ngSubmit)="updateUser()">
+<div [formGroup]="updateUserForm">
   <app-user-form formControlName="profile"></app-user-form>
 
   <button
@@ -13,7 +13,8 @@
     mat-raised-button
     color="primary"
     [disabled]="!updateUserForm.valid"
+    (click)="updateUser()"
   >
     Update user
   </button>
-</form>
+</div>
