--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
     <mat-menu #menu="matMenu">
       <a mat-menu-item routerLink="/admin/profile">Profile</a>
       <mat-divider></mat-divider>
-      <a mat-menu-item routerLink="/admin/login">Log out</a>
+      <a mat-menu-item (click)="logout()">Log out</a>
     </mat-menu>
   </div>
 </header>
