remove date-fns, using date pipe instead

--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -54,7 +54,7 @@
       <ng-container matColumnDef="birthday">
         <th mat-header-cell *matHeaderCellDef>Birthday</th>
         <td mat-cell *matCellDef="let element">
-          {{ formatDate(element.birthday) }}
+          {{ element.birthday | date : "MM/dd/yyyy" }}
         </td>
       </ng-container>
 
