add error interceptor

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,11 @@
-<p>not-found works!</p>
+<h1>SORRY!</h1>
+
+<p>Either you aren't cool enough to visit this page or it doesn't exist ...</p>
+
+<p>
+  <br />
+  <button mat-raised-button routerLink="/admin/dashboard">
+    <mat-icon aria-hidden="false" aria-label="Add icon">chevron_left</mat-icon>
+    Back to Dashboard
+  </button>
+</p>
