--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -54,7 +54,7 @@
       <ng-container matColumnDef="birthday">
         <th mat-header-cell *matHeaderCellDef>Birthday</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.birthday | date : "MM/dd/yyyy" }}
+          {{ element.birthday | date: "MM/dd/yyyy" }}
         </td>
       </ng-container>
 
@@ -84,13 +84,23 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
-    <mat-paginator
+    <!-- <mat-paginator
       #paginator
       [length]="totalItems"
       [pageSize]="itemsPerPage"
       [pageSizeOptions]="[5, 10, 20, 50]"
       showFirstLastButtons
       (page)="changePage($event)"
-    ></mat-paginator>
+    ></mat-paginator> -->
+
+    <div class="paginator">
+      <app-paginator
+        #paginator
+        [length]="totalItems"
+        [pageSize]="itemsPerPage"
+        showFirstLastButtons
+        (page)="changePage($event)"
+      ></app-paginator>
+    </div>
   </div>
 </div>
